<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_img"
        android:contentDescription="A man doing a yoga pose"/>




    <TextView
        android:id="@+id/tvTitle"
        style="@style/Theme.UniversalYogaCoursework.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="66dp"
        android:text="@string/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCreateYogaCourse"
        style="@style/Theme.UniversalYogaCoursework.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginBottom="14dp"
        android:text="@string/btnCreateYogaCourse"
        app:layout_constraintBottom_toTopOf="@+id/btnPushData"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnViewCourses"
        style="@style/Theme.UniversalYogaCoursework.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="16dp"
        android:layout_marginBottom="14dp"
        android:text="@string/btnViewCourses"
        app:layout_constraintBottom_toTopOf="@+id/btnPushData"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnPushData"
        style="@style/Theme.UniversalYogaCoursework.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/btnPushData"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>